--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "recharts": "^2.15.4",
     "resend": "^6.5.2",
     "sonner": "^1.7.4",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76"
