--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "input-otp": "^1.4.2",
     "jose": "^6.1.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "prisma": "^7.0.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
